--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
 </header>
 
 <main>
-<!-- HERO AVEC VIDÉO EN FOND -->
-<section class="hero-video">
-<video autoplay muted loop playsinline class="bg-video">
-<!-- Remplace le fichier par ta propre vidéo -->
-<source src="assets/videos/background.mp4" type="video/mp4">
-Votre navigateur ne supporte pas la vidéo.
-</video>
+    <!-- SECTION HERO AVEC VIDÉO EN FOND -->
+    <section class="hero-video">
 
+    <video class="bg-video" autoplay muted loop playsinline>
+        <source src="assets/vidéos/5483085-uhd_4096_2160_25fps.mp4" type="video/mp4">
+    </video>
 
-<div class="hero-overlay"></div>
+    <div class="hero-overlay"></div>
 
+    <div class="hero-content">
+        <h1>Kylian Laurent</h1>
+        <h2>Développeur Web</h2>
+    </div>
 
-<div class="hero-content">
-<h1>Kylian LAURENT</h1>
-<h2>Alternant Bachelor infrastructure réseaux et cybersécurité</h2>
-</div>
 </section>
 </main>
 
