--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
         <a href="about-me.html">À propos</a>
         <a href="enterprise.html">Entreprise</a>
         <a href="projects.html">Projets</a>
+        <a href="database.html">Base de connaissances</a>
         <a href="blog.html">Blog</a>
         <a href="videos.html">Vidéos</a>
         <a href="reviews.html">Avis</a>
