--- a/enterprise.html
+++ b/enterprise.html
@@ -528,10 +528,10 @@
                     <h2>Centre APRES</h2>
                     <div id="menu1" class="enterprise-menu">
                         <ul>
-                            <li><a href="#info1">Informations</a></li>
-                            <li><a href="#services1">Services</a></li>
-                            <li><a href="#missions1">Missions</a></li>
-                            <li><a href="#contact1">Contact</a></li>
+                            <li><a href="informations.html">Informations</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="missions.html">Missions</a></li>
+                            <li><a href="contactentreprise.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -541,10 +541,10 @@
                     <h2>Analyse Décision & Solutions</h2>
                     <div id="menu2" class="enterprise-menu">
                         <ul>
-                            <li><a href="#info2">Informations</a></li>
-                            <li><a href="#services2">Services</a></li>
-                            <li><a href="#missions2">Missions</a></li>
-                            <li><a href="#contact2">Contact</a></li>
+                            <li><a href="informations.html">Informations</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="missions.html">Missions</a></li>
+                            <li><a href="contactentreprise.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
