--- a/informations.html
+++ b/informations.html
@@ -508,17 +508,17 @@
     </header>
 
     <!-- Navigation -->
-         <nav id="nav-links">
-            <a href="index.html">Accueil</a>
-            <a href="about-me.html">À propos</a>
-            <a href="enterprise.html">Entreprise</a>
-            <a href="projects.html">Projets</a>
-            <a href="database.html">Base de connaissances</a>
-            <a href="formations.html">Formations</a>
-            <a href="logiciels.html">Logiciels</a>
-            <a href="reviews.html">Avis</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <nav id="nav">
+        <a href="index.html">Accueil</a>
+        <a href="about-me.html">À propos</a>
+        <a href="enterprise.html">Entreprise</a>
+        <a href="projects.html">Projets</a>
+        <a href="database.html">Base de connaissances</a>
+        <a href="formations.html">Formations</a>
+        <a href="logiciels.html">Logiciels</a>
+        <a href="reviews.html">Avis</a>
+        <a href="contact.html">Contact</a>
+    </nav>
 
     <!-- Bouton Retour -->
     <a href="javascript:history.back()" class="btn-back">
@@ -548,14 +548,11 @@
         <div class="info-section">
             <h2>L'Entreprise</h2>
             <p>
-                <span class="editable">[Nom de l'entreprise]</span> est une entreprise spécialisée dans 
-                <span class="editable">[secteur d'activité, ex: le développement web, la cybersécurité, etc.]</span>.
+                <span class="editable">L'Association APRES</span> est une association dont le but est de 
+                <span class="editable">répondre à l'exclusion et à la souffrance des personnes atteintes de troubles psychiques.</span>
             </p>
             <p>
-                L'entreprise propose <span class="editable">[description des services/produits principaux, ex: des solutions innovantes pour la transformation digitale des entreprises]</span>.
-            </p>
-            <p>
-                <span class="editable">[Ajoutez d'autres informations pertinentes sur l'entreprise: sa taille, son marché, ses valeurs, etc.]</span>
+                L'entreprise propose <span class="editable">des solutions de soins et de réinsertion et offre des passerelles entre l'hospitalisation et la vie en société, via si nécessaire, des structures médico-sociales variées, tel est leur objectif.</span>
             </p>
         </div>
 
@@ -564,13 +561,13 @@
             <h2>Mon Alternance</h2>
             <div class="info-box">
                 <p>
-                    <strong>Durée :</strong> <span class="editable">[Ex: 2 ans - du 01/09/2024 au 31/08/2026]</span>
+                    <strong>Durée :</strong> <span class="editable">1 an - du 21/09/2025 au 21/09/2026</span>
                 </p>
                 <p>
-                    <strong>Poste :</strong> <span class="editable">[Ex: Développeur Web en alternance]</span>
+                    <strong>Poste :</strong> <span class="editable">Alternant Administrateur Infrastructure et Réseaux</span>
                 </p>
                 <p>
-                    <strong>Formation :</strong> <span class="editable">[Ex: BTS SIO option SLAM]</span>
+                    <strong>Formation :</strong> <span class="editable">Bachelor Infrastructure, Réseaux et Cybersécurité</span>
                 </p>
             </div>
         </div>
