--- a/services.html
+++ b/services.html
@@ -510,9 +510,13 @@
     <!-- Navigation -->
     <nav id="nav">
         <a href="index.html">Accueil</a>
-        <a href="informations.html">Informations</a>
-        <a href="competences.html">Compétences</a>
-        <a href="projets.html">Projets</a>
+        <a href="about-me.html">À propos</a>
+        <a href="enterprise.html">Entreprise</a>
+        <a href="projects.html">Projets</a>
+        <a href="database.html">Base de connaissances</a>
+        <a href="formations.html">Formations</a>
+        <a href="logiciels.html">Logiciels</a>
+        <a href="reviews.html">Avis</a>
         <a href="contact.html">Contact</a>
     </nav>
 
@@ -526,49 +530,16 @@
             <h1>SERVICES</h1>
         </div>
 
-        <div class="instruction">
-            <strong>📝 Instructions :</strong>
-            Remplacez les textes surlignés en jaune par vos propres informations. Pour le logo, remplacez le chemin "logo.png" par le chemin de votre image.
-        </div>
-
-        <!-- Section Logo -->
-        <div class="logo-section">
-            <div class="logo-placeholder">
-                <!-- Remplacez "logo.png" par le chemin de votre logo -->
-                <img src="logo.png" alt="Logo de l'entreprise" style="display: none;">
-                <span>Ajoutez votre logo ici<br>(Remplacez "logo.png" dans le code)</span>
-            </div>
-        </div>
-
         <!-- Section Entreprise -->
         <div class="info-section">
-            <h2>L'Entreprise</h2>
+            <h2>Services proposés</h2>
             <p>
-                <span class="editable">[Nom de l'entreprise]</span> est une entreprise spécialisée dans 
-                <span class="editable">[secteur d'activité, ex: le développement web, la cybersécurité, etc.]</span>.
+                <span class="editable">L’établissement</span> accueille des hommes et des femmes (entre 18 et 60 ans) présentant des troubles psychiques stabilisés et dont les difficultés entrainent souvent une rupture avec le milieu social, professionnel ou familial. 
+                <span class="editable">Situé à la charnière du sanitaire et du social, notre établissement propose des activités menées par une équipe médico-éducative, dans un but de construire progressivement un projet d'insertion.</span>
             </p>
             <p>
-                L'entreprise propose <span class="editable">[description des services/produits principaux, ex: des solutions innovantes pour la transformation digitale des entreprises]</span>.
+                La réhabilitation de la personne <span class="editable">prend appui sur ses potentialités, sur le développement de ses compétences afin de favoriser son intégration socio-professionnelle.</span>
             </p>
-            <p>
-                <span class="editable">[Ajoutez d'autres informations pertinentes sur l'entreprise: sa taille, son marché, ses valeurs, etc.]</span>
-            </p>
-        </div>
-
-        <!-- Section Alternance -->
-        <div class="info-section">
-            <h2>Mon Alternance</h2>
-            <div class="info-box">
-                <p>
-                    <strong>Durée :</strong> <span class="editable">[Ex: 2 ans - du 01/09/2024 au 31/08/2026]</span>
-                </p>
-                <p>
-                    <strong>Poste :</strong> <span class="editable">[Ex: Développeur Web en alternance]</span>
-                </p>
-                <p>
-                    <strong>Formation :</strong> <span class="editable">[Ex: BTS SIO option SLAM]</span>
-                </p>
-            </div>
         </div>
     </div>
 
