--- a/enterprise.html
+++ b/enterprise.html
@@ -541,7 +541,7 @@
                     <h2>Analyse Décision & Solutions</h2>
                     <div id="menu2" class="enterprise-menu">
                         <ul>
-                            <li><a href="informations.html">Informations</a></li>
+                            <li><a href="informationsAdes.html">Informations</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="missions.html">Missions</a></li>
                             <li><a href="contactentreprise.html">Contact</a></li>
