--- a/projects.html
+++ b/projects.html
@@ -606,8 +606,12 @@
                     <h2>Bachelor</h2>
                     <div id="project1" class="project-menu">
                         <ul>
-                            <li><a href="assets/docs/Bachelor1.pdf" target="_blank">Bachelor1.pdf</a></li>
-                            <li><a href="assets/docs/Bachelor2.docx" target="_blank">Bachelor2.docx</a></li>
+                            <li> AD
+                                <ul>
+                                    <li><a href="assets/docs/Bachelor1.pdf" target="_blank">Bachelor1.pdf</a></li>
+                                    <li><a href="assets/docs/Bachelor2.docx" target="_blank">Bachelor2.docx</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -617,7 +621,7 @@
                     <h2>BTS</h2>
                     <div id="project2" class="project-menu">
                         <ul>
-                            <li><a href="assets/docs/BTS1.pdf" target="_blank">BTS1.pdf</a></li>
+                            <li><a href="assets/docs/AD.pdf" target="_blank">AD.pdf</a></li>
                             <li><a href="assets/docs/BTS2.docx" target="_blank">BTS2.docx</a></li>
                         </ul>
                     </div>
