--- a/projects.html
+++ b/projects.html
@@ -621,7 +621,7 @@
                     <h2>BTS</h2>
                     <div id="project2" class="project-menu">
                         <ul>
-                            <li><a href="assets/docs/AD.pdf" target="_blank">AD.pdf</a></li>
+                            <li><a href="assets/docs/active-directory-dWxB7V4gW8tNw3o1" target="_blank">AD.pdf</a></li>
                             <li><a href="assets/docs/BTS2.docx" target="_blank">BTS2.docx</a></li>
                         </ul>
                     </div>
