--- a/database.html
+++ b/database.html
@@ -692,6 +692,31 @@
                     <div class="term-title">SSL/TLS</div>
                     <div class="term-description">Protocoles cryptographiques assurant la sécurité des communications sur Internet.</div>
                 </div>
+
+                <div class="term-card">
+                    <div class="term-title">IPv4</div>
+                    <div class="term-description">Version 4 du protocole IP utilisant des adresses sur 32 bits.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">IPv6</div>
+                    <div class="term-description">Version 6 du protocole IP utilisant des adresses sur 128 bits pour pallier la pénurie d’IPv4.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">Masque de sous-réseau</div>
+                    <div class="term-description">Permet de diviser un réseau en sous-réseaux plus petits en déterminant la partie réseau et la partie hôte d’une IP.</div>
+                </div>
+                
+                <div class="term-card">
+                    <div class="term-title">Gateway</div>
+                    <div class="term-description">Appareil qui connecte différents réseaux et transmet les paquets.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">NAT</div>
+                    <div class="term-description">Technique modifiant les adresses IP des paquets pour permettre la communication entre réseaux privés et publics.</div>
+                </div>
             </div>
 
             <!-- Articles Tab -->
