--- a/database.html
+++ b/database.html
@@ -717,6 +717,66 @@
                     <div class="term-title">NAT</div>
                     <div class="term-description">Technique modifiant les adresses IP des paquets pour permettre la communication entre réseaux privés et publics.</div>
                 </div>
+
+                <div class="term-card">
+                    <div class="term-title">ARP</div>
+                    <div class="term-description">Protocole qui associe une adresse IP à une adresse MAC sur un réseau local.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">ICMP</div>
+                    <div class="term-description">Protocole utilisé pour envoyer des messages de contrôle et de diagnostic dans les réseaux IP.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">HTTP</div>
+                    <div class="term-description">Protocole de communication pour transférer des pages web.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">HTTPS</div>
+                    <div class="term-description">Version sécurisée de HTTP utilisant le chiffrement SSL/TLS.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">FTP</div>
+                    <div class="term-description">Protocole pour transférer des fichiers entre un client et un serveur.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">SFTP</div>
+                    <div class="term-description">Version sécurisée de FTP utilisant SSH.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">SMTP</div>
+                    <div class="term-description">Protocole pour l’envoi d’e-mails.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">IMAP</div>
+                    <div class="term-description">Protocole pour consulter et gérer des e-mails sur un serveur.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">POP3</div>
+                    <div class="term-description">Protocole pour récupérer les e-mails et les stocker localement.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">SNMP</div>
+                    <div class="term-description">Protocole pour surveiller et gérer les équipements réseau.</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">Telnet</div>
+                    <div class="term-description">Protocole pour accéder à distance à un appareil, non sécurisé</div>
+                </div>
+
+                <div class="term-card">
+                    <div class="term-title">SSL</div>
+                    <div class="term-description">Protocole assurant la sécurité des communications sur Internet.</div>
+                </div>
             </div>
 
             <!-- Articles Tab -->
